New Table, added US

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -70,68 +70,934 @@
 
 ### 8.2 User Stories
 
-| US01 | Log In | high | Bernardo | 100% |
-| US02 | Register | high |  | 100%  |
-| US04 | Home Page | high |  | 100%  |
-| US05 | About Page | low |  | 100% |
-| US06 | FAQ Page | medium |  | 100% |
-| US07 | Contact Page | medium |  | 100% |
-| US11 | View Profiles | high | | 100% |
-| US10 | Search Users | high | | 100% |
-| US15 | View My Projects | high | | 100% |
-| US17 | Log Out | high |  | 100% |
-| US19 | Create Private Projects | high | | 100% |
-| US21 | View Task | high | | 100% |
-| US41 | Edit Project description | low | | 100% |
-| US23 | Edit My Tasks | high | | 100% |
-| US08 | Search Projects | high |  |  100 % |
-| US20 | Search Tasks | high | | 100% |
-| US18 | Delete Account | low | | 100% |
-| US35 | Delete Task | medium | | 100% |
-| US13 | Create Project | high | | 100% |
-| US36 | Delete Task Comment | medium | | 100% |
-| US22 | Create Task | high | | 100%|
-| US44 | Delete project | low | | 100% |
+<table>
+  <tr>
+    <th><b>User Story </b></th>
+    <th><b>Description </b></th>
+    <th><b>Priority </b></th>
+    <th><b>Team Members </b></th>
+    <th><b>State </b></th>  
+  </tr>
+    <tr>
+        <td>
+          US01
+        </td>
+        <td>
+          Log In
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          Bernardo
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US02
+        </td>
+        <td>
+          Register
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US03
+        </td>
+        <td>
+          Log In Using OAUTH
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          0%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US04
+        </td>
+        <td>
+          Home Page
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US05
+        </td>
+        <td>
+          About Page
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US06
+        </td>
+        <td>
+          FAQ Page
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US07
+        </td>
+        <td>
+          Contact Page
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US08
+        </td>
+        <td>
+          Search Projects
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US09
+        </td>
+        <td>
+          View Project
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US10
+        </td>
+        <td>
+          Search Users
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US11
+        </td>
+        <td>
+          View Profiles
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US12
+        </td>
+        <td>
+          Edit Profile
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+  <tr>
+        <td>
+          US13
+        </td>
+        <td>
+          Create Project
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US14
+        </td>
+        <td>
+          Access Dashboard
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US15
+        </td>
+        <td>
+          View My Projects
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+  <tr>
+        <td>
+          US16
+        </td>
+        <td>
+          Statistics
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          0%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US17
+        </td>
+        <td>
+          Log Out
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+  <tr>
+        <td>
+          US18
+        </td>
+        <td>
+          Delete Account
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US19
+        </td>
+        <td>
+          Create Private Projects
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+  <tr>
+        <td>
+          US20
+        </td>
+        <td>
+          Search Tasks
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US21
+        </td>
+        <td>
+          View Tasks
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US22
+        </td>
+        <td>
+          Create Task
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+  <tr>
+        <td>
+          US23
+        </td>
+        <td>
+          Edit My Tasks
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US24
+        </td>
+        <td>
+          Assign To My Tasks
+        </td>
+        <td>
+          medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US25
+        </td>
+        <td>
+          Comment Task
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US26
+        </td>
+        <td>
+          Mark Task As Completed
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US27
+        </td>
+        <td>
+          View Forum
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US28
+        </td>
+        <td>
+          Create Post
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US29
+        </td>
+        <td>
+          Reply To Post
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US30
+        </td>
+        <td>
+          Leave Project
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US31
+        </td>
+        <td>
+          Close Task
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US32
+        </td>
+        <td>
+          Create Task Tags
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US33
+        </td>
+        <td>
+          Delete Task Tags
+        </td>
+        <td>
+          medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US34
+        </td>
+        <td>
+          Edit Tasks
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US35
+        </td>
+        <td>
+          Delete Task
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US36
+        </td>
+        <td>
+          Delete Task Comment
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US37
+        </td>
+        <td>
+          Assign To Task
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US38
+        </td>
+        <td>
+          Delete Post
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US39
+        </td>
+        <td>
+          Delete Reply
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US40
+        </td>
+        <td>
+          Manage Project Members
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+    <tr>
+        <td>
+          US41
+        </td>
+        <td>
+          Edit Project Description
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </t>
+      <tr>
+        <td>
+          US42
+        </td>
+        <td>
+          Transfer Ownership
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US43
+        </td>
+        <td>
+          Manage Project Administrators
+        </td>
+        <td>
+          Medium
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+   <tr>
+        <td>
+          US44
+        </td>
+        <td>
+          Delete Project
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US45
+        </td>
+        <td>
+          Administration Page
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US46
+        </td>
+        <td>
+          Search Projects
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US47
+        </td>
+        <td>
+          Delete Projects
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US48
+        </td>
+        <td>
+          Remove Comments
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US49
+        </td>
+        <td>
+          Search Users
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US50
+        </td>
+        <td>
+          View Profile
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US51
+        </td>
+        <td>
+          Promote User
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US52
+        </td>
+        <td>
+          Ban User
+        </td>
+        <td>
+          High
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          100%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US53
+        </td>
+        <td>
+          Maintenance
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          0%
+        </td>
+    </tr>
+      <tr>
+        <td>
+          US54
+        </td>
+        <td>
+          General Messages
+        </td>
+        <td>
+          Low
+        </td>
+        <td>
+          TM
+        </td>
+        <td>
+          0%
+        </td>
+    </tr>
+</table>
 
-| US26 | Mark Task as Completed | medium | | 100% |
-
-| US09 | View Project | high | | 100% |
-
-| US32 | Create Task Tags | medium | | 100% |
-| US33 | Delete Task Tags | medium | | 100% |
-
-| US12 | Edit Profile | high | | 100 %|
-
-| US14 | Access Dashboard | high | | 50% |
-
-| US24 | Assign to My Tasks | medium | | 100% |
-| US25 | Comment Task | medium | | 100% |
-
-| US30 | Leave Project | medium | | 100%|
-| US31 | Close Task | medium | | 100%|
-| US34 | Edit Tasks | high | | 100% |
-| US37 | Assign to Task | medium | | 100%|
-
-| US40 | Manage project member's | medium | | 100%|
-| US42 | Transfer Ownership | medium | | 100%|
-| US43 | Manage project administrators| medium | | 100%|
-
-| US45 | Administration Page | high | | 100%|
-| US46 | Search Projects | high | | 100%|
-| US47 | Delete Projects | high | | 100%|
-| US48 | Remove Comments | high | | 100%|
-| US49 | Search Users | high | | 100%|
-| US50 | View Profile | high | | 100%|
-| US51 | Promote User | high | | 100%|
-| US52 | Ban User     | high | | 100%|
-| US53 | Maintenance  | low |  | 0%|
-| US54| General Messages| low | | 0%|
-
-| US27 | View Forum | high | | 10% |
-| US28 | Create Post | high | | 0%|
-| US29 | Reply to Post | high | | 0% |
-| US38 | Delete Post | medium | | 0%|
-| US39 | Delete Reply | medium | | 0% |
 
 ***
 
