--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -89,7 +89,7 @@
           High
         </td>
         <td>
-          Bernardo
+          Mateus
         </td>
         <td>
           100%
@@ -106,7 +106,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo, Mateus
         </td>
         <td>
           100%
@@ -140,7 +140,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus, João
         </td>
         <td>
           100%
@@ -157,7 +157,7 @@
           Low
         </td>
         <td>
-          TM
+          Mateus, Mário
         </td>
         <td>
           100%
@@ -174,7 +174,7 @@
           Medium
         </td>
         <td>
-          TM
+          Mateus, Mário
         </td>
         <td>
           100%
@@ -191,7 +191,7 @@
           Medium
         </td>
         <td>
-          TM
+          Mateus, Mário
         </td>
         <td>
           100%
@@ -208,7 +208,7 @@
           High
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -225,7 +225,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus, Bernardo
         </td>
         <td>
           100%
@@ -242,7 +242,7 @@
           High
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -259,7 +259,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus, Bernardo
         </td>
         <td>
           100%
@@ -276,7 +276,7 @@
           High
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -293,7 +293,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -310,7 +310,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus
         </td>
         <td>
           100%
@@ -327,7 +327,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus, Bernardo
         </td>
         <td>
           100%
@@ -361,7 +361,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus
         </td>
         <td>
           100%
@@ -378,7 +378,7 @@
           Low
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -395,7 +395,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -412,7 +412,7 @@
           High
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -429,7 +429,7 @@
           High
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -446,7 +446,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -463,7 +463,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -480,7 +480,7 @@
           medium
         </td>
         <td>
-          TM
+          João, Bernardo, Mateus
         </td>
         <td>
           100%
@@ -497,7 +497,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -514,7 +514,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -531,7 +531,7 @@
           High
         </td>
         <td>
-          TM
+          Mário
         </td>
         <td>
           100%
@@ -548,7 +548,7 @@
           High
         </td>
         <td>
-          TM
+          Mário
         </td>
         <td>
           100%
@@ -565,7 +565,7 @@
           High
         </td>
         <td>
-          TM
+          Mário
         </td>
         <td>
           100%
@@ -582,7 +582,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -599,7 +599,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -616,7 +616,7 @@
           Medium
         </td>
         <td>
-          TM
+          João
         </td>
         <td>
           100%
@@ -633,7 +633,7 @@
           medium
         </td>
         <td>
-          TM
+          João
         </td>
         <td>
           100%
@@ -650,7 +650,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -667,7 +667,7 @@
           Medium
         </td>
         <td>
-          TM
+          João
         </td>
         <td>
           100%
@@ -684,7 +684,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -701,7 +701,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -718,7 +718,7 @@
           Medium
         </td>
         <td>
-          TM
+          Mário
         </td>
         <td>
           100%
@@ -735,7 +735,7 @@
           High
         </td>
         <td>
-          TM
+          Mário
         </td>
         <td>
           100%
@@ -752,7 +752,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -769,7 +769,7 @@
           Low
         </td>
         <td>
-          TM
+          Bernardo, Mateus
         </td>
         <td>
           100%
@@ -786,7 +786,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -803,7 +803,7 @@
           Medium
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -820,7 +820,7 @@
           Low
         </td>
         <td>
-          TM
+          Bernardo, João, Mateus
         </td>
         <td>
           100%
@@ -837,7 +837,7 @@
           High
         </td>
         <td>
-          TM
+          Mateus, João
         </td>
         <td>
           100%
@@ -854,7 +854,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -871,7 +871,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo, João
         </td>
         <td>
           100%
@@ -888,7 +888,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -905,7 +905,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -922,7 +922,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -939,7 +939,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
@@ -956,7 +956,7 @@
           High
         </td>
         <td>
-          TM
+          Bernardo
         </td>
         <td>
           100%
