--- a/artifacts/A11/A11.md
+++ b/artifacts/A11/A11.md
@@ -1,18 +1,23 @@
 # A11: Presentation
 
-> This artefact (A11 - Product Presentation) must be published as a web page on the group's GitHub account.
+> This artefact (A11 - Product Presentation) must be submitted as a PDF on Moodle.
 
 ## 1. Product presentation
 
-> Brief presentation of the product and its main features (2 paragraphs max).
-> URL to the product: http://lbaw17GG.lbaw-prod.fe.up.pt
+Plenum is a **Project Management** Web Application, in which you can lead or belong to a project (private or public) and participate in various tasks and discussions, in order to take your project to the next level.
+We also have an intelligent search engine, in which you can search for something in another project that is visible to the public.
+
+URL to the product: http://lbaw1743.lbaw-prod.fe.up.pt
 
 ## 2. Video presentation
 
-> Screenshot of the video plus link to the video (e.g. YouTube, Vimeo, personal account, etc).
-> The video must not exceed 2 minutes.
+Youtube - https://www.youtube.com/watch?v=CTHymKAezB0
 
 ## 3. Contacts
 
-> Group member 1 name, email
-> Group member 2 name, email
+GROUP43, 31/05/2018
+
+> Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
+> Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
+> João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt
+> Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt
